--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who pay</title>
+    <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
     <section>
@@ -22,6 +23,6 @@
         </div>
     </section>
 
-    <script src="js/app.js"></script>
+    <script src="dist/css/js/app.js"></script>
 </body>
 </html>
